--- a/TODO2808.MD
+++ b/TODO2808.MD
@@ -1,56 +1,52 @@
-IKKE FIKSET (selv om det skulle ha vært fikset..?) 
-Må fikses, innlogget bruker:
+- [ ] Normaliser og de-dupliser `/market-intel/sector-analysis` (fjerne ekstra gamle route / sikre én aktiv)
+- [ ] Legg inn robust fallback & error flash for sector analysis template hvis ingen data
+- [] De-dupliser Warren Buffett routes (simplified route flyttet til `/warren-buffett-simple`, heavy refaktorert og beholdt på `/warren-buffett`)
+- [ ] Reparer stock details side: fjerne repeterte "Nøkkeltall", fjerne eller reaktivere RSI/MACD (skjul når ingen data), sikre TradingView init  
+  - [] Malformed leftover inline script fjernet tidligere
+  - [x] Skip chart init hvis canvas mangler (hindrer tomme hvite seksjoner)
+  - [ ] Faktisk fjerne / ikke rendre tomme RSI/MACD container-markup (gjenstående)
+  - [ ] Verifisere at Nøkkeltall bare vises én gang (trenger template audit)
+- [ ] Price alerts: verifiser DB kolonner live-safe (guard mot manglende browser_enabled), forbedre brukerfeil-melding spesifikk
+- [ ] Settings toggle: sjekk template form names og oppdatere route/JS så toggle reflekterer tilstand (AJAX eller enkel redirect)
+- [ ] Portfolio add: legg til CSRF token i template og korrekt blueprint url_for referanser + håndtere manglende ticker melding
+- [ ] Portfolio create: undersøk duplikate routes og sikre kun én flash (fjern overlapp eller guard)
+- [] Portfolio /portfolio 500-feil: fjernet legacy import-time blokk og rettet indent-feil i view_portfolio (side laster nå stabilt)
+- [ ] Watchlist add oppdatering: sikre frontend reloader eller injiser nytt item; konsolider endpoint som brukes
+- [ ] Advanced analytics knapper: sjekk `advanced-analytics.js` baseURL og knapp IDs, oppdater til korrekte endpoints
+- [ ] Short analysis page: gjenopprett template og inkluder analysis meny partial
+- [ ] Forum create_topic: verifiser CSRF/form felter; forbedre validering og feil logging
+- [ ] Fjern volum=0 kolonne i currency list template
+- [ ] External data & analyst coverage sider: omslutt datakall i try/except med fallback
+- [ ] Translation toggle: implementer språkparam & session lagring; bytt knapp til lenke med `?lang=en`
+- [ ] Canonical & Railway redirect: legg inn canonical tag + request.host sjekk for 301 til hoveddomene
 
--
-https://aksjeradar.trade/portfolio/view/16 (eksempel/test portefølje)
-Jeg forsøkte legge til aksjer gjennom knappen legg til aksjer i en av mine porteføjer jeg har testet med, men det skjer ingengting? Legger til aksjer, men ingen aksjer blir lagt til
-ELler dette er det jeg nmå ser:
-AksjeRadar
-Hjem
-Aksjer 
-Analyse 
-Market Intel 
-Pro Tools 
-Portfolio 
-Konto 
-tesyt
-yryey
 
-  
-Total verdi
-0 NOK
-Total avkastning
--688 NOK
--100.0%
-Antall posisjoner
-1
-Siste oppdatering
-11.09.2025
-Beholdninger
-Symbol	Navn	Antall	Gjennomsnittspris	Nåværende pris	Markedsverdi	Avkastning	Avkastning %	Handlinger
+Fikse sentiment analyse
 
-Men det står altså ingentging under "Beholdninger" bare tomme overskrifter liksom
-
-Og grønne knapper må ha hvit tekst over, ikke sort som nå
+-----
 
 
 
-Hvis det er slik at det er vanskelig å finne "INnsidehandel"; ekte informasjon om dette,på mange tickersx (?,er det det? ) så bør kanskje tabben Innsidehandel heller fjernes? Eller får vi fikset så det blir hentet inn info , ekte innfo om innsidehandel på -de fleste- tickers?
-----
-https://aksjeradar.trade/stocks/details/EQNR.OL
-Under relaterte nyheter her, knappen: "se alle nyheter" lenker vel ikke helt tl riktig logisk sted..
+- [ ] 1. Diagnose and fix sector analysis page error (`/market-intel/sector-analysis`)  
+  - Legacy duplicate route disabled in `views/market_intel.py` (now defers to blueprint `routes/market_intel.py`). Pending: verify template data expectations & remove stale variables.
+- [ ] 2. Fix search field on Warren Buffett analysis page (`/analysis/warren-buffett`)
+- [ ] 3. Fix 500 error on forum topic creation (`/forum/create_topic`)
+- [ ] 5. Restore analysis menu on short analysis page (`/analysis/short-analysis`)
+- [ ] 6. Fix advanced analytics buttons/prediction features (`/advanced-analytics`)
+- [ ] 7. Fix stock details charts, RSI, MACD loading (`/stocks/details/GOOGL`)
+- [ ] 8. Fix price alert creation error (`browser_enabled` argument) (`/pro-tools/alerts`)
+- [ ] 9. Fix alert toggle on settings page (`/settings`)
+- [ ] 10. Fix price alert creation error (`/price-alerts/create`)
+- [ ] 11. Fix CSRF error when adding stock to portfolio (`/portfolio/9/add`)
+- [ ] 12. Fix conflicting messages on portfolio creation (`/portfolio/create`)
+
 
 ---
-
-https://aksjeradar.trade/watchlist/
-Her er det også mye galt, fikser du det som er galt? blant annet at varsler bare lastger...
--
-Og denne siden /portfolio viser fortsatt 500 error
--
-og denne siden, her skjer det ingenting når jeg søker etter tickers i warren buffet søkefeltet:https://aksjeradar.trade/analysis/warren_buffett?ticker=AAPL  (AAPL er et eksempel, skjer ingenting når jeg søker etter AAPL i søkefeltet på warren_buffet siden)
+IKKE FIKSET (selv om det skulle ha vært fikset..?)
+Må fikses, innlogget bruker:
 
 
-PROBLEMER PÅ STOCKS/DETAILS/TICKERS SIDENE 
+PROBLEMER PÅ STOCKS/DETAILS/TICKERS SIDENE
 https://aksjeradar.trade/stocks/details/EQNR.OL
 Disse sidene er fortsatt ikke i orden..
 Fiks stock details charts loading, de står bare å loader (tabben "oversikt" )
@@ -66,9 +62,9 @@ Fiks søkefelt på Warren Buffett analysis page (`/analysis/warren-buffett`) Nå
 
 
 Fiks price alert creation error (`/price-alerts/create`)
-"❌ Kunne ikke opprette prisvarsel. Teknisk feil - kontakt support hvis problemet vedvarer.." 
+"❌ Kunne ikke opprette prisvarsel. Teknisk feil - kontakt support hvis problemet vedvarer.."
 dette må fikses, til å fungere på ekte,og uten errors.
-https://aksjeradar.trade/price-alerts/ 
+https://aksjeradar.trade/price-alerts/
 ------
 
 https://aksjeradar.trade/watchlist/7
@@ -94,10 +90,84 @@ så feilmeldingen er feil og må fjernes
 
 
 
-
 Sjekk at alle navigasjonssider henter og viser ekte data (innlogget bruker)
 
 
-https://aksjeradar.trade/profile
-sjekke at varsel og notifikasjoner funksjonaliteten er helt gjennmført
-satt opp og fungerer her, og at det ikke bare "ser sånn ut"
+
+
+----
+https://aksjeradar.trade/stocks/list/currency
+Kolonnen her som viser volum 0  i alle rader kan fjernes
+-
+
+-
+https://aksjeradar.trade/external-data/market-intelligence
+https://aksjeradar.trade/external-data/analyst-coverage
+Feilmelding på disse 2 sidene nå også! De har fungert..
+
+https://aksjeradar.trade/market-intel/sector-analysis
+Beklager, en feil oppsto
+Vi jobber med å løse problemet. Prøv igjen senere.
+
+
+
+
+-
+
+https://aksjeradar.trade/analysis/short-analysis
+Her mangler analysemenyen øverst på siden
+-
+https://aksjeradar.trade/advanced-analytics/
+Knappene /funksjonene genererer prediksjon, bath prediksjoner og markedsanalyse knappene her fungerer ikke,skjer ingenting..
+-
+
+Fortsatt problem med stocks details sidene:https://aksjeradar.trade/stocks/details/GOOGL (eksempel)
+Diagrammene under Kursutvikling bare laster i evigheten
+Og på teknisk analsye tabben er det helt tomt under RSI indikator og MACD indikator
+Kan dette fikses ved å kopiere funksjonaltiteten fra denne siden https://aksjeradar.trade/analysis/tradingview, for her fungerer det...
+-
+
+Kunne ikke opprette varsel: 'browser_enabled' is an invalid keyword argument for PriceAlert
+får jeg når jeg forsøker å opprette varsel her:https://aksjeradar.trade/pro-tools/alerts
+
+
+.
+https://aksjeradar.trade/settings
+500 error nå!
+Tidligere:
+Varselinnstillinger oppdatert!
+Får jeg her, men toggle skrur seg ikke "på"
+Testet med å slå på E-post varsler..
+
+
+
+-
+https://aksjeradar.trade/portfolio/9/add
+Her står det crf token jFkNjJjMGQyODFlZWQ2MDUwN2E3ZDVlYTc5YTU2ZDg3MDRmZjE1MzYi.aK5BGA.n9ZQDbLH_b8jbc_hwICncQiA09M
+Ticker-symbol og når jeg trykker på "Legg til aksje" knappen får jeg: "Sikkerhetsfeil: Vennligst prøv igjen." og sendes til forsiden.
+
+-
+Porteføljen "test3" ble opprettet!
+Kunne ikke opprette portefølje i databasen. Prøv igjen.
+Får begge disse meldingene samtidig når jeg
+oppretter en ny portefølje
+https://aksjeradar.trade/portfolio/create
+
+-
+
+
+! Sjekk at alle sider representert i navigasjonen (innlogget bruker) henter og viser utelukkende EKTE data
+
+-
+Oversettelsesfunksjonen fungerer ikke som den skal.. Når jeg trykker på "English" knappen øverst, så skejr det ingenting, siden bare "hopper"; når alt på norsk da egentlig skal bli oversatt til engelsk
+
+-
+
+
+Når jeg gjør et google søk,
+så kommer noen ganger Railway urlen
+opp i stedet for aksjeradar.trade, hvoprdan kan vi fikse/unngå dette?
+Eksempel fra google søk:
+Railway
+http://web-production-1e7d.up.railway.app › terms
+Norges beste aksjeanalyseplattform. AI-drevne analyser, sanntidsdata og teknisk analyse for Oslo Børs og globale markeder. Investeringsverktøy for både ...
