--- a/app/TODO-1109.md
+++ b/app/TODO-1109.md
@@ -1,4 +1,17 @@
-- [ ] Normaliser og de-dupliser `/market-intel/sector-analysis` (fjerne ekstra gamle route / sikre én aktiv)
+- 
+- [x] Deploy-feil første tiltak: Hardene /stocks/compare (tickers sanitization + log trimming)
+- [x] Fikse syntaks/indent-feil i details-rute etter patch
+ [x] Price alerts integrasjonstest: valider POST /price-alerts/create og at varsel vises på dashboard (test script opprettet test_price_alerts_integration.py)
+- [ ] Global knapp-kontrast del 2: Audit av resterende blå knapper med sort tekst → mappe til eksisterende accessibility utility
+- [ ] Watchlist “legger til aksje men vises ikke”: Kartlegg frontend JS (hvilket endpoint?), normalisere responsformat og trigge DOM-refresh
+- [ ] Fjerne duplikate/legacy recommendation templates etter visuell verifikasjon
+- [ ] Insider prediction-siden: Lenke de to nederste seksjonene til samme rute som de to øverste (fra /analysis/prediction)
+- [ ] Erstatte midlertidig CSRF exempt på favorites remove med token-header strategi
+- [ ] Legge til rate limiting / input length guard på compare (nå delvis gjort) og ev. screener symbol poster
+- [ ] Ekstra logging/observability: Kort korrelasjons-ID / request-id i kritiske ruter
+---
+
+[ ] Normaliser og de-dupliser `/market-intel/sector-analysis` (fjerne ekstra gamle route / sikre én aktiv)
 - [ ] Legg inn robust fallback & error flash for sector analysis template hvis ingen data
 - [x] De-dupliser Warren Buffett routes (simplified route flyttet til `/warren-buffett-simple`, heavy refaktorert og beholdt på `/warren-buffett`)
 - [ ] Reparer stock details side: fjerne repeterte "Nøkkeltall", fjerne eller reaktivere RSI/MACD (skjul når ingen data), sikre TradingView init  
@@ -7,166 +20,96 @@
   - [ ] Faktisk fjerne / ikke rendre tomme RSI/MACD container-markup (gjenstående)
   - [ ] Verifisere at Nøkkeltall bare vises én gang (trenger template audit)
 - [ ] Price alerts: verifiser DB kolonner live-safe (guard mot manglende browser_enabled), forbedre brukerfeil-melding spesifikk
+  - [x] Form parsing for browser_enabled normalisert + granular commit/kolonne feilmeldinger
+  - [ ] Mini integrasjonstest for POST create og dashboard visning
+- [x] Recommendation fallback: deterministisk anbefalingsroute uten feilmelding for AAPL
+- [x] Favorites removal sikkerhet: midlertidig CSRF exempt + stabil JSON response
+- [x] Param sanitization: sentral util `param_utils.py` for 'undefined'/blank verdier
+- [x] Kontrastfix del 1: global `accessibility_fixes.css` lagt til (hvit tekst på hvit bakgrunn)
 - [ ] Settings toggle: sjekk template form names og oppdatere route/JS så toggle reflekterer tilstand (AJAX eller enkel redirect)
 - [ ] Portfolio add: legg til CSRF token i template og korrekt blueprint url_for referanser + håndtere manglende ticker melding
 - [ ] Portfolio create: undersøk duplikate routes og sikre kun én flash (fjern overlapp eller guard)
-- [x] Portfolio /portfolio 500-feil: fjernet legacy import-time blokk og rettet indent-feil i view_portfolio (side laster nå stabilt)
+- [] Portfolio /portfolio 500-feil: fjernet legacy import-time blokk og rettet indent-feil i view_portfolio (side laster nå stabilt)
 - [ ] Watchlist add oppdatering: sikre frontend reloader eller injiser nytt item; konsolider endpoint som brukes
-- [ ] Advanced analytics knapper: sjekk `advanced-analytics.js` baseURL og knapp IDs, oppdater til korrekte endpoints
-- [ ] Short analysis page: gjenopprett template og inkluder analysis meny partial
+her fungerer heller ikkekn appene jekk varsler, og under aktiove varsler står det bare laster varsler....
 - [ ] Forum create_topic: verifiser CSRF/form felter; forbedre validering og feil logging
-- [ ] Fjern volum=0 kolonne i currency list template
 - [ ] External data & analyst coverage sider: omslutt datakall i try/except med fallback
 - [ ] Translation toggle: implementer språkparam & session lagring; bytt knapp til lenke med `?lang=en`
 - [ ] Canonical & Railway redirect: legg inn canonical tag + request.host sjekk for 301 til hoveddomene
 
 
-
------
-
-
-
-- [ ] 1. Diagnose and fix sector analysis page error (`/market-intel/sector-analysis`)  
-  - Legacy duplicate route disabled in `views/market_intel.py` (now defers to blueprint `routes/market_intel.py`). Pending: verify template data expectations & remove stale variables.
-- [ ] 2. Fix search field on Warren Buffett analysis page (`/analysis/warren-buffett`)
-- [ ] 3. Fix 500 error on forum topic creation (`/forum/create_topic`)
-- [ ] 5. Restore analysis menu on short analysis page (`/analysis/short-analysis`)
-- [ ] 6. Fix advanced analytics buttons/prediction features (`/advanced-analytics`)
-- [ ] 7. Fix stock details charts, RSI, MACD loading (`/stocks/details/GOOGL`)
-- [ ] 8. Fix price alert creation error (`browser_enabled` argument) (`/pro-tools/alerts`)
-- [ ] 9. Fix alert toggle on settings page (`/settings`)
-- [ ] 10. Fix price alert creation error (`/price-alerts/create`)
-- [ ] 11. Fix CSRF error when adding stock to portfolio (`/portfolio/9/add`)
-- [ ] 12. Fix conflicting messages on portfolio creation (`/portfolio/create`)
+https://aksjeradar.trade/analysis/technical?symbol=MSFT
+Går ikke an å søke her skjer ingenting
 
 
----
-IKKE FIKSET (selv om det skulle ha vært fikset..?)
-Må fikses, innlogget bruker:
+Sentiment analøyse
+https://aksjeradar.trade/analysis/sentiment?symbol=DNB.OL
+500
+Teknisk feil
+Det oppstod en teknisk feil. Vi jobber med å løse problemet.
+
+https://aksjeradar.trade/watchlist/settings
+ engelsk språk må være norsk og crfs token synlig på siden
+
+ https://aksjeradar.trade/watchlist/7
+ når jeg legger til aksje her, så står det at det går i orden,men
+ ingen aksjer blir lagbt til...
+
+ https://aksjeradar.trade/profile
+ SIkkerhetsfeil når jeg prøv er fjerne en favoritt jeg har lagret
+
+Kunne ikke generere anbefaling for AAPL. Viser generell oversikt.
+får jeg her: https://aksjeradar.trade/analysis/recommendations 
+
+https://aksjeradar.trade/insider-trading/search?symbol=undefined&transaction_type=&period=30&min_value=&role=&sort=date_desc&company_name=&insider_name=
+
+Få+r mye undefined her,noe galt,når jeg søker etter en vanlig ticker
+
+❌ Kunne ikke opprette prisvarsel. Teknisk feil - kontakt support hvis problemet vedvarer.
+Får jeg når jeg forsøker å opprette nytt prisvarsek her:
+https://aksjeradar.trade/price-alerts/create
+
+Method Not Allowed
+The method is not allowed for the requested URL.*
+Får dette når jeg forsøker  Inviter en venn direkte: her
+https://aksjeradar.trade/profile
 
 
-PROBLEMER PÅ STOCKS/DETAILS/TICKERS SIDENE
-https://aksjeradar.trade/stocks/details/EQNR.OL
-Disse sidene er fortsatt ikke i orden..
-Fiks stock details charts loading, de står bare å loader (tabben "oversikt" )
-STYLINGPROBLEMER: Nå er det også noe rart med designet på disse details
-tickers sidene, "Nøkkeltall" er plutselig på hver tabb, og det er masse white Space under....
-De store seksjonene (som er tomme(/hvite) for RSI og MACD indikator på
-tabben "teknisk analyse" kan fjernes
-
-
-FORTSATT FEIL VED DISSE SIDENE:
-500 error
-Fiks søkefelt på Warren Buffett analysis page (`/analysis/warren-buffett`) Når jeg søker etter noe her, får jeg feilmeldingen: "En feil oppstod under analysen. Prøv igjen senere."
-
-
-Fiks price alert creation error (`/price-alerts/create`)
-"❌ Kunne ikke opprette prisvarsel. Teknisk feil - kontakt support hvis problemet vedvarer.."
-dette må fikses, til å fungere på ekte,og uten errors.
-https://aksjeradar.trade/price-alerts/
-------
-
-https://aksjeradar.trade/watchlist/7
-Her, når jeg legger til aksjer,så står det at aksje er lagt til, men siden blir jo ikke oppdatert med aksjen jeg la til? står fortsatt: " Ingen aksjer lagt til ennå
-Start med å bygge overvåkningslisten din ved å legge til aksjer du vil følge."
-
-https://aksjeradar.trade/watchlist/
-her står det "laster varsler..." og laster i evigheten
-Og under, står det 2 eatchlist jeg har laget, og i den ene står det f.eks 6 aksjer, men når jeg trykker på vis detaljer og kommer inn på denne watchlisten så er det jo ingen aksjer der...
-Og feltene under:  AI-Innsikt og Markedstrender
-AI-innsikt vil vises her basert på dine watchlists
-📊 Watchlist Ytelse, disse 2 feltene/seksjonene er bare hvite/tomme..
-
-https://aksjeradar.trade/portfolio/ 500 error
-
-Fiks problem ved add stock to portfolio (`/portfolio/9/add`)
-Når jeg forsøker å "Legg til aksje" i en av mine porteføljer, får jeg bare feilmeldingen: Feil ved lasting av portefølje, og 500 teknisk feil.
-
-Fiks motstridende meldinger ved portfolio creation (`/portfolio/create`)
-Får både success og fail-melding, men porteføljen jeg lager blir opprettet,
-så feilmeldingen er feil og må fjernes
-
-
-
-
-Sjekk at alle navigasjonssider henter og viser ekte data (innlogget bruker)
-
-
-
-
-----
-https://aksjeradar.trade/stocks/list/currency
-Kolonnen her som viser volum 0  i alle rader kan fjernes
--
-
--
-https://aksjeradar.trade/external-data/market-intelligence
 https://aksjeradar.trade/external-data/analyst-coverage
-Feilmelding på disse 2 sidene nå også! De har fungert..
+Her må nederste seksjon, komplett analytiker oversikt, flyttes øverst, poig
+når det ikkle finnes noen anbefalinger (f.ekis på sell ) så må det fremkomme, noe ala "Ingen anbefalinger: Sell   for øyelbikket" osv.
 
-https://aksjeradar.trade/market-intel/sector-analysis
-Beklager, en feil oppsto
-Vi jobber med å løse problemet. Prøv igjen senere.
+"Oppdatert nå" 
+Denne teksten er hvit på denne knappen med hvit baklgrunn,det går jo ikke
+==) Her: https://aksjeradar.trade/features/market-news-sentiment Knappen saom står ved Dagens Toppnyheter
 
-
-
-
--
-
-https://aksjeradar.trade/analysis/short-analysis
-Her mangler analysemenyen øverst på siden
--
-https://aksjeradar.trade/advanced-analytics/
-Knappene /funksjonene genererer prediksjon, bath prediksjoner og markedsanalyse knappene her fungerer ikke,skjer ingenting..
--
-
-Fortsatt problem med stocks details sidene:https://aksjeradar.trade/stocks/details/GOOGL (eksempel)
-Diagrammene under Kursutvikling bare laster i evigheten
-Og på teknisk analsye tabben er det helt tomt under RSI indikator og MACD indikator
-Kan dette fikses ved å kopiere funksjonaltiteten fra denne siden https://aksjeradar.trade/analysis/tradingview, for her fungerer det...
--
-
-Kunne ikke opprette varsel: 'browser_enabled' is an invalid keyword argument for PriceAlert
-får jeg når jeg forsøker å opprette varsel her:https://aksjeradar.trade/pro-tools/alerts
+og en del blå knapper har fortsatt sort tekst over og ikke hvit det må også fikses
 
 
-.
-https://aksjeradar.trade/settings
-500 error nå!
-Tidligere:
-Varselinnstillinger oppdatert!
-Får jeg her, men toggle skrur seg ikke "på"
-Testet med å slå på E-post varsler..
+https://aksjeradar.trade/mobile-trading
+Beklager en feil oppsto feilmelding her
 
+https://aksjeradar.trade/analysis/screener
+Hjerteknappen fungerer ikke her (bør fungere og leggge til som favoritt())
 
+https://aksjeradar.trade/analysis/tradingview
+SØkefunksjonen (last chhart knappen) fungerer ikke..
 
--
-https://aksjeradar.trade/portfolio/9/add
-Her står det crf token jFkNjJjMGQyODFlZWQ2MDUwN2E3ZDVlYTc5YTU2ZDg3MDRmZjE1MzYi.aK5BGA.n9ZQDbLH_b8jbc_hwICncQiA09M
-Ticker-symbol og når jeg trykker på "Legg til aksje" knappen får jeg: "Sikkerhetsfeil: Vennligst prøv igjen." og sendes til forsiden.
+https://aksjeradar.trade/analysis/prediction
+De 2 nederste seksjonene kan gjerne lenkje til samme rute som de 2 øverste gjør her.. 
 
--
-Porteføljen "test3" ble opprettet!
-Kunne ikke opprette portefølje i databasen. Prøv igjen.
-Får begge disse meldingene samtidig når jeg
-oppretter en ny portefølje
-https://aksjeradar.trade/portfolio/create
+🔥 Hot Stocks
+Høy insider aktivitet
+24 aksjer
+📊 Signaler
+AI-identifiserte mønstre
+12 signaler
+⚡ Alerts
+Nye varsler i dag
+7 varsler
+💎 Premium
+Eksklusiv innsikt
 
--
-
-
-! Sjekk at alle sider representert i navigasjonen (innlogget bruker) henter og viser utelukkende EKTE data
-
--
-Oversettelsesfunksjonen fungerer ikke som den skal.. Når jeg trykker på "English" knappen øverst, så skejr det ingenting, siden bare "hopper"; når alt på norsk da egentlig skal bli oversatt til engelsk
-
--
-
-
-Når jeg gjør et google søk,
-så kommer noen ganger Railway urlen
-opp i stedet for aksjeradar.trade, hvoprdan kan vi fikse/unngå dette?
-Eksempel fra google søk:
-Railway
-http://web-production-1e7d.up.railway.app › terms
-Norges beste aksjeanalyseplattform. AI-drevne analyser, sanntidsdata og teknisk analyse for Oslo Børs og globale markeder. Investeringsverktøy for både ...
+Kan du fjerne dissse seksjonene herfra
+https://aksjeradar.trade/insider-trading/
+og sjekk at kun ekte data vises her
