--- a/TODO-1209.md
+++ b/TODO-1209.md
@@ -1,77 +1,118 @@
-analysis/screener
-her får jeg feilmeld beklager en feil oppstod
--
-/analysis/technical?symbol=AAPL
-Skjer fortsgtt ingenting når jeg søker på tickers på technical her... mdette har dfungert tidligere ogh m fungere? eller er det kanskje en fiks jher i staging som ikke er comitted bare
--
-Ingen Oslo Børs data tilgjengelig for øyeblikket.
+/norwegian-intel/social-sentiment:
+"Hurtiganalyse - Populære Aksjer"
+udner denne overskriften her er det noen ticere under med pil som går til lenker, og jeg ønsker at du fjerner lenkene på d\e som er til "AI aNBEFALING" og "Legg til portefølje"
+og litt lenger med på siden,"Real-time Norwegian Stock Sentiment" i denne seksjonen, så ønsker jeg at du fjerner hele kolonnnen under "Analyser", 
+atså at det ikke er disse ytterste blå Analsyer knappene her på hver ticker
 
-Kryptovaluta
-Ingen kryptovaluta data tilgjengelig.
+-
 
-Valutakurser
-Ingen valutadata tilgjengelig.
+external-data/analyst-coverage
+Du kan fjerne eller skjule  "knappene" / lenke eher som er øv erst til høyre: Buy, Hold, Sell
+
+
+"Begrenset modus: Du ser en forenklet visning. – Se planene."
+Dette toppbanneret er der på meg enda,og det er galt når jeg er innlogget... (premium og)
+/stocks/details/AAPL
+Disse details sidene er fortsatt ødelagte! Viser ingenting,kun en smal hvit linje
+
+
+/analysis/technical
+Nå er det duplikat av søkefeltet her,og ingen av de funerer som de skal
+
+/forum/ søkefeltet her, gir 500 error når jeg tester det
+forum/2
+Publisert 12.09.2025 03:26
+testtesttesttesttesttesttesttesttesttesttesttesttesttest
+Bør gå an å slette egne innlegg man har laget, på samme sted, altså inne på innlegget,
+eksempelvis innelgget mitt forum/2, savner en slette knapp for meg der som fjerner innlegget helt dersom jeg vil det
+
+
+
+Nå fungrer ikke market_overview siden:
+ "Beklager, en feil oppsto
+Vi jobber med å løse problemet. Prøv igjen senere."
 Dette må fikses!! på analysis/market-overview
 
 -
 /analysis/tradingview
-Prøøver søke i søkefeltet her skjer ingenting.. 
+Prøøver søke etter f.eks TSLA søkefeltet her skjer ingenting.. 
 
 
 -
-Denne siden fungerer ikke
- viderekoblet deg for mange ganger.
-
-Prøv å slette informasjonskapslene dine."
-Får dette her:: /analysis/recommendations
-
+/analysis/recommendations
+Her står det ingenting under Markedsutsikter og Sektoranbefaligner
+Nøkkeltemaer:
+Risikofaktorer:
+helt tomt?
+og knappen Detaljer fugnererer ikke og skal lenke til /details sidene
+og knappen Aksje skal egentlig hete Anbefaling, og lenke til /analysis/ai
 -
+ /analysis/recommendations/TSLA
+" Her står det:
+Hovedargumenter
+Positive faktorer:
+(Demo) Illustrativ grunn
+Risikoer:
+(Demo) Illustrativ risiko"
+ Som tyder på at det ikke hentes inn ekte data,det å fikses
+
+
+
+
 /analysis/strategy-builder
-Sjekk at det er ekte data som nbrukes her under ,"moine strategiret" og fiks at alle knapper;  rediger og test under mine strategier seksjonen, fungerer
+Prøver lagre strategi her, får feilmeldingen feil ved lagring
 
--
+-----
+
 /portfolio/edit/AAPL
-Ser crfs token på siden her,d et er feil, når jeg forsøker redigere en aksje i min portefølje
+"500
+Teknisk feil
+Det oppstod en teknisk feil. Vi jobber med å løse problemet."
 
+/portfolio
+Mine porteføljer
+Velg portefølje:
+test
+// Modal-based portfolio deletion with typed confirmation let deletePortfolioId = null; function deletePortfolio(portfolioId) { deletePortfolioId = portfolioId; const modalEl = document.getElementById('confirmDeletePortfolioModal'); if (!modalEl) return; const portfolioName = document.querySelector('h2.mb-1')?.innerText || 'porteføljen'; modalEl.querySelector('#deletePortfolioName').innerText = portfolioName; modalEl.querySelector('#confirmPortfolioName').value = ''; modalEl.querySelector('#confirmDeleteBtn').disabled = true; const bsModal = new bootstrap.Modal(modalEl); bsModal.show(); } function onPortfolioNameInput(ev) { const input = ev.target.value.trim(); const expected = document.getElementById('deletePortfolioName').innerText.trim(); document.getElementById('confirmDeleteBtn').disabled = (input !== expected); } function submitPortfolioDeletion() { if (!deletePortfolioId) return; const portfolioCard = document.querySelector(`[data-portfolio-id="${deletePortfolioId}"]`); if (portfolioCard) { portfolioCard.style.opacity = '0.5'; portfolioCard.style.pointerEvents = 'none'; } fetch(`/portfolio/delete/${deletePortfolioId}`, { method: 'POST', headers: { 'X-CSRFToken': document.querySelector('meta[name="csrf-token"]')?.getAttribute('content') || '', 'Accept': 'application/json', 'Content-Type': 'application/json' } }) .then(r => r.json()) .then(data => { if (data.success) { showToast(data.message || 'Portefølje slettet', 'success'); setTimeout(() => window.location.href = '/portfolio/overview', 600); } else { if (portfolioCard) { portfolioCard.style.opacity = '1'; portfolioCard.style.pointerEvents = 'auto'; } showToast(data.error || 'Kunne ikke slette portefølje', 'error'); } }) .catch(err => { console.error('Delete portfolio error', err); if (portfolioCard) { portfolioCard.style.opacity = '1'; portfolioCard.style.pointerEvents = 'auto'; } showToast('Teknisk feil ved sletting av portefølje', 'error'); }); }
 
-Og når jeg prøver slett under handlinger her: /portfolio/, virker det heller ikke som at det b,lir slette, teset på ticker aapl jeg har i porteføljen min "test" , men  den ble ikke borte
+her er det noe alvorlig galt!
 
+Og når jeg prøver slett under handlinger her: /portfolio/, virker det heller ikke som at det blir slettet, teset på ticker aapl jeg har i porteføljen min "test" , men  den ble ikke borte
+Og knappen Legg til aksje på samme side, /portfolio fungerer ikke
+og  fjern knappen Transaksjoner fra denne siden
 -
-Method Not Allowed
-The method is not allowed for the requested URL.
-Tester "Inviter en venn direkte " og knappen "send invitasjon" fåvr da denne feilmeldingen
 
 -
 ❌ Kunne ikke opprette prisvarsel (tjenestefeil).
 price-alerts/create
 Får denne feilmeldingen her..
 
--
-/portfolio/
-Kan du fjerne knappen Transaksjoner fra denne siden
-Og fikse knappen slett porteføøje den /funksjonen fungeer hvertfall ikke og må fungere
 
 -
-forum/2
-
-Publisert 12.09.2025 03:26
-testtesttesttesttesttesttesttesttesttesttesttesttesttest
-
--
-Insider trading index: Fjerne Hot Stocks / Signaler / Alerts / Premium placeholder-seksjoner og vise kun ekte data + tomtilstand
+Insider trading:
+Avansert Innsidehandel Søk
+Aksjesymbol
+Søkefeltet under her, fungerer ikke som det skal...
+Knappene CSV og Excel kan du fjerne
+De sorte tekstene på blå bakgrunn må være hvite! Dette gjelder på flere sider.
 -
 
 - [ ] Screener hjerteknapp: Sikre suksessrespons (endre favorites add-endpoint til garantert JSON + bedre feilrespons), evt. tilby toggle-endpoint bru
 -
-Watchlist “legger til aksje men vises ikke”:
 
-Et innlegg jeg har laget på formuet, det bør gå an å slette det her også, altså at jeg kan sløette mitt eget innlegg inne på mitt eget innnlegg
 
--
-Translation toggle: implementer språkparam & session lagring; bytt knapp til lenke med `?lang=en`
+/watchlist/
+Her "Laster varsler" i evigheten
+Vis detaljer knappen gir 500n error
+Sjekk varlser knappen fungerer ikke
+Ukentlig tapport knappen kan du fjerne/skjule
 
--
-Jeg ser ikke at jeg har fått NOEN eposter som er varsler heller på min gmail,selvom jeg har satt opp masse vatsler her og der?
+I en watchlist jeg har laget, /watchlist/9,  forsøkte ejg "Legg til aksje" funsjonen. Så ut som ddet fungerte, men det ble til slutt ikke noe endring i watchlisten, /watchlist/9, ingen aksjer ble lagt til selvom det virket slik..
+
+
+/watchlist/settings
+Send testvarsel- denne knappen/funksjonen fungerer ikke..
+
 
 
 https://aksjeradar.trade/mobile-trading
@@ -81,13 +122,22 @@ Beklager en feil oppsto feilmelding her
  https://aksjeradar.trade/profile
  SIkkerhetsfeil når jeg prøv er fjerne en favoritt jeg har lagret
 
+-
+på /profile:
+ Method Not Allowed
+The method is not allowed for the requested URL.
+Tester "Inviter en venn direkte " og knappen "send invitasjon" fåvr da denne feilmeldingen
 
- .
- .
- 
+
+-
  /analysis/prediction 
- analyseknappene her,m under seksjonene
+ analyseknappene her, under seksjonene
  Kryptovaluta og valuta, de lenker nå til
  Warren buffet, kan de heller lenke på samme måte som seksjonene for oslo børs og globale
  aksjer, altså til: /analysis/ai?ticker=EQNR.OL
  (eksempel på ticker da, men dub skjønner, denne ruten på alle analyse knappene på /analysis/prediction)
+
+ -
+Jeg ser ikke at jeg har fått NOEN eposter som er varsler heller på min gmail,selvom jeg har satt opp masse vatsler her og der?
+
+Translation toggle: implementer språkparam & session lagring; bytt knapp til lenke med `?lang=en`
